# Computer_Vision

./: .gitignore  CMakeLists.txt
project/01_hello_opencv/: CMakeLists.txt
project/01_hello_opencv/01_01_hello_world/: main.cpp
project/01_hello_opencv/01_02_hello_opencv/: main.cpp
project/02_images/: CMakeLists.txt
project/02_images/02_01_load_and_display_images/: main.cpp
project/02_images/02_02_load_and_display_gray_images/: main.cpp
project/02_images/02_03_image_properties/: main.cpp
project/02_images/02_04_convert_and_save_images/: main.cpp
project/02_images/02_05_split_and_merge_channels/: main.cpp
project/02_images/02_06_concatenate_gray_images/: CMakeLists.txt  main.cpp
project/02_images/02_07_concatenate_color_and_gray_images/: main.cpp
project/02_images/02_08_region_of_interest/: main.cpp
project/03_videos_and_cameras/: CMakeLists.txt
project/03_videos_and_cameras/03_01_load_and_display_videos/: main.cpp
project/03_videos_and_cameras/03_02_load_and_display_videos_infinately/: CMakeLists.txt  main.cpp
project/03_videos_and_cameras/03_03_capture_images_from_camera/: main.cpp
project/03_videos_and_cameras/03_04_save_videos/: main.cpp
project/04_drawing/: CMakeLists.txt
project/04_drawing/04_01_access_pixels_fast/: main.cpp
project/04_drawing/04_02_access_pixels_safe/: main.cpp
project/04_drawing/04_03_access_pixels_random/: main.cpp
project/04_drawing/04_04_access_pixels_order/: main.cpp
project/04_drawing/04_05_drawing_shapes/: main.cpp
project/05_user_interface/: CMakeLists.txt
project/05_user_interface/05_01_keyboard_inputs/: CMakeLists.txt  main.cpp
project/05_user_interface/05_02_mouse_double_click_to_draw_a_circle/: main.cpp
project/05_user_interface/05_03_mouse_drag_to_draw_a_rectangle/: main.cpp
project/05_user_interface/05_04_trackbar_as_the_color_palette/: main.cpp
project/06_image_histogram/: CMakeLists.txt
project/06_image_histogram/06_01_image_histogram_grayscale/: CMakeLists.txt  main.cpp
project/06_image_histogram/06_03_image_histogram_equalization/: CMakeLists.txt  main.cpp
project/07_image_thresholding/: CMakeLists.txt
project/07_image_thresholding/07_01_image_thresholding/: main.cpp
project/07_image_thresholding/07_02_otsu_binarization/: CMakeLists.txt  gray_histogram.cpp  gray_histogram.hpp  main.cpp
project/07_image_thresholding/07_03_adaptive_thresholding_01/: CMakeLists.txt  main.cpp
project/07_image_thresholding/07_04_adaptive_thresholding_02/: CMakeLists.txt  main.cpp
project/08_image_blending/: CMakeLists.txt
project/09_image_blurring/: CMakeLists.txt
project/09_image_blurring/09_01_image_filtering/: CMakeLists.txt  main.cpp
project/09_image_blurring/09_02_image_smoothing_01/: CMakeLists.txt  main.cpp
project/09_image_blurring/09_03_image_smoothing_02/: main.cpp
project/09_image_blurring/09_04_bilateral_filter_01/: CMakeLists.txt  main.cpp
project/09_image_blurring/09_05_bilateral_filter_02/: CMakeLists.txt  main.cpp
project/09_image_blurring/09_06_image_smoothing_03/: CMakeLists.txt  main.cpp
project/10_image_gradients/: CMakeLists.txt
project/10_image_gradients/10_01_prewitt_filter/: main.cpp
project/10_image_gradients/10_02_sobel_filter/: CMakeLists.txt  main.cpp
project/10_image_gradients/10_03_sobel_filter_dtype/: CMakeLists.txt  main.cpp
project/10_image_gradients/10_04_prewitt_sobel_scharr_filters/: main.cpp
project/10_image_gradients/10_05_laplace_filter/: CMakeLists.txt  main.cpp
project/10_image_gradients/10_06_canny_edge_detection_video/: main.cpp
project/11_morphological_transformations/: CMakeLists.txt
project/11_morphological_transformations/11_01_erosion/: main.cpp
project/11_morphological_transformations/11_02_dilation/: main.cpp
project/11_morphological_transformations/11_03_structuring_element/: CMakeLists.txt  main.cpp
project/11_morphological_transformations/11_04_structuring_element_erosion/: CMakeLists.txt  main.cpp
project/11_morphological_transformations/11_05_structuring_element_dilation/: main.cpp
project/11_morphological_transformations/11_06_morphological_transformations/: CMakeLists.txt  main.cpp
project/11_morphological_transformations/11_07_morphological_transformations_color/: CMakeLists.txt  main.cpp
project/11_morphological_transformations/11_08_hit_or_miss/: main.cpp
project/12_hough_transform/: CMakeLists.txt
project/12_hough_transform/12_01_hough_transform/: CMakeLists.txt  main.cpp
project/12_hough_transform/12_02_probabilistic_hough_transform/: CMakeLists.txt  main.cpp
project/12_hough_transform/12_03_circle_hough_transform/: CMakeLists.txt  main.cpp
project/12_hough_transform/12_04_RANSAC_line/: main.cpp  normalized_line.hpp
project/14_geometric_transformations/: CMakeLists.txt
project/14_geometric_transformations/14_01_scaling/: CMakeLists.txt  main.cpp
project/14_geometric_transformations/14_02_translation/: main.cpp
project/14_geometric_transformations/14_03_rotation/: main.cpp
project/14_geometric_transformations/14_04_affine_transformation/: CMakeLists.txt  main.cpp
project/15_homography/: CMakeLists.txt
project/81_homework_01/: CMakeLists.txt
project/81_homework_01/HW_01_01_draw_rectangles/: CMakeLists.txt
project/81_homework_01/HW_01_01_draw_rectangles_wysiwyg/: main.cpp
project/81_homework_01/HW_01_02_draw_rectangles_once/: main.cpp
project/81_homework_01/HW_01_03_draw_rectangles_and_ellipses/: main.cpp
project/81_homework_01/HW_01_04_draw_rectangles_ellipses_and_brush/: main.cpp
project/81_homework_01/HW_01_04_draw_rectangles_ellipses_or_brush/: main.cpp
project/정태민_2018204059_HW_02/: CMakeLists.txt
project/정태민_2018204059_HW_03/: CMakeLists.txt
project/정태민_2018204059_HW_03/HW_03_01_translation/: main.cpp
project/정태민_2018204059_HW_03/HW_03_02_translation_original/: main.cpp
project/정태민_2018204059_HW_03/HW_03_03_scaling/: main.cpp
project/정태민_2018204059_HW_03/HW_03_04_scaling_center/: main.cpp
project/정태민_2018204059_HW_03/HW_03_05_translation_scaling/: main.cpp
project/정태민_2018204059_HW_03/HW_03_06_rotation_translation_scaling/: main.cpp
(+15 files in other folders)
