cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/03_01_load_and_display_videos")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/03_02_load_and_display_videos_infinately")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/03_03_capture_images_from_camera")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/03_04_save_videos")