cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/04_01_access_pixels_fast")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/04_02_access_pixels_safe")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/04_03_access_pixels_random")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/04_04_access_pixels_order")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/04_05_drawing_shapes")