cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/05_01_keyboard_inputs")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/05_02_mouse_double_click_to_draw_a_circle")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/05_03_mouse_drag_to_draw_a_rectangle")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/05_04_trackbar_as_the_color_palette")