cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/07_01_image_thresholding")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/07_02_otsu_binarization")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/07_03_adaptive_thresholding_01")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/07_04_adaptive_thresholding_02")