cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/09_01_image_filtering")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/09_02_image_smoothing_01")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/09_03_image_smoothing_02")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/09_04_bilateral_filter_01")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/09_05_bilateral_filter_02")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/09_06_image_smoothing_03")