cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/12_01_hough_transform")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/12_02_probabilistic_hough_transform")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/12_03_circle_hough_transform")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/12_04_RANSAC_line")