cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/14_01_scaling")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/14_02_translation")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/14_03_rotation")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/14_04_affine_transformation")