cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_03_01_translation")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_03_02_translation_original")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_03_03_scaling")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_03_04_scaling_center")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_03_05_translation_scaling")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_03_06_rotation_translation_scaling")



